Fixed wrapping (thanks to @emergenz for raising the issue)

--- a/themes/brevis/static/css/style.css
+++ b/themes/brevis/static/css/style.css
@@ -196,13 +196,15 @@ footer
   max-width  : 100%;
   margin     : auto;
   display    : flex;
+  flex-wrap  : wrap;
   padding    : 1em;
   margin-top : 1em;
 }
 
 .card-left
 {
-  flex: 1;
+  flex     :    1;
+  max-width: 180px;
 }
 
 .card-right
